--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 				<form action="https://formsubmit.co/aritraghosh625@gmail.com" method="POST">
      <input type="text" name="name" required>
      <input type="email" name="email" required>
+		<input type="file" name="Paid-Work" id="">
 <textarea name="Message"></textarea>
+
      <button type="submit">Send</button>
 </form>
 </body>
